openshift/cats/test/database/cats_postgres_cluster_network_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cats-postgres-cluster
  namespace: e38158-test
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: cats-postgres-cluster
  ingress:
    - from:
        - podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: cats-postgres-cluster
    - ports:
        - protocol: TCP
          port: 5432
      from:
        - namespaceSelector: {}
  policyTypes:
    - Ingress
